--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,167 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Project ChronoSaurus_Data/app.info
+Project ChronoSaurus_Data/boot.config
+Project ChronoSaurus_Data/globalgamemanagers
+Project ChronoSaurus_Data/globalgamemanagers.assets
+Project ChronoSaurus_Data/level0
+Project ChronoSaurus_Data/level1
+Project ChronoSaurus_Data/Managed/Assembly-CSharp-firstpass.dll
+Project ChronoSaurus_Data/Managed/Assembly-CSharp.dll
+Project ChronoSaurus_Data/Managed/Mono.Security.dll
+Project ChronoSaurus_Data/Managed/mscorlib.dll
+Project ChronoSaurus_Data/Managed/netstandard.dll
+Project ChronoSaurus_Data/Managed/System.ComponentModel.Composition.dll
+Project ChronoSaurus_Data/Managed/System.Configuration.dll
+Project ChronoSaurus_Data/Managed/System.Core.dll
+Project ChronoSaurus_Data/Managed/System.Data.dll
+Project ChronoSaurus_Data/Managed/System.Diagnostics.StackTrace.dll
+Project ChronoSaurus_Data/Managed/System.dll
+Project ChronoSaurus_Data/Managed/System.Drawing.dll
+Project ChronoSaurus_Data/Managed/System.EnterpriseServices.dll
+Project ChronoSaurus_Data/Managed/System.Globalization.Extensions.dll
+Project ChronoSaurus_Data/Managed/System.IO.Compression.dll
+Project ChronoSaurus_Data/Managed/System.IO.Compression.FileSystem.dll
+Project ChronoSaurus_Data/Managed/System.Net.Http.dll
+Project ChronoSaurus_Data/Managed/System.Numerics.dll
+Project ChronoSaurus_Data/Managed/System.Runtime.Serialization.dll
+Project ChronoSaurus_Data/Managed/System.Runtime.Serialization.Xml.dll
+Project ChronoSaurus_Data/Managed/System.ServiceModel.Internals.dll
+Project ChronoSaurus_Data/Managed/System.Transactions.dll
+Project ChronoSaurus_Data/Managed/System.Xml.dll
+Project ChronoSaurus_Data/Managed/System.Xml.Linq.dll
+Project ChronoSaurus_Data/Managed/System.Xml.XPath.XDocument.dll
+Project ChronoSaurus_Data/Managed/Unity.TextMeshPro.dll
+Project ChronoSaurus_Data/Managed/Unity.Timeline.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.AccessibilityModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.AccessibilityModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.AIModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.AIModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.AndroidJNIModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.AndroidJNIModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.AnimationModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.AnimationModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.ARModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.ARModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.AssetBundleModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.AssetBundleModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.AudioModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.AudioModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.ClothModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.ClothModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.ClusterInputModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.ClusterInputModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.ClusterRendererModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.ClusterRendererModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.CoreModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.CoreModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.CrashReportingModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.CrashReportingModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.DirectorModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.DirectorModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.DSPGraphModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.DSPGraphModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.FileSystemHttpModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.FileSystemHttpModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.GameCenterModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.GameCenterModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.GridModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.GridModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.HotReloadModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.HotReloadModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.ImageConversionModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.ImageConversionModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.IMGUIModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.IMGUIModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.InputLegacyModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.InputLegacyModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.InputModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.InputModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.JSONSerializeModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.JSONSerializeModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.LocalizationModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.LocalizationModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.ParticleSystemModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.ParticleSystemModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.PerformanceReportingModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.PerformanceReportingModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.Physics2DModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.Physics2DModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.PhysicsModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.PhysicsModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.ProfilerModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.ProfilerModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.ScreenCaptureModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.ScreenCaptureModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.SharedInternalsModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.SharedInternalsModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.SpriteMaskModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.SpriteMaskModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.SpriteShapeModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.SpriteShapeModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.StreamingModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.StreamingModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.SubstanceModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.SubstanceModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.TerrainModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.TerrainModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.TerrainPhysicsModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.TerrainPhysicsModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.TextCoreModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.TextCoreModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.TextRenderingModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.TextRenderingModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.TilemapModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.TilemapModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.TLSModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.TLSModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UI.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UIElementsModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UIElementsModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UIModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UIModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UmbraModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UmbraModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UNETModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UNETModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityAnalyticsModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityAnalyticsModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityConnectModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityConnectModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityTestProtocolModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityTestProtocolModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestAssetBundleModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestAssetBundleModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestAudioModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestAudioModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestTextureModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestTextureModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestWWWModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.UnityWebRequestWWWModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.VehiclesModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.VehiclesModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.VFXModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.VFXModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.VideoModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.VideoModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.VRModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.VRModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.WindModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.WindModule.dll.mdb
+Project ChronoSaurus_Data/Managed/UnityEngine.XRModule.dll
+Project ChronoSaurus_Data/Managed/UnityEngine.XRModule.dll.mdb
+Project ChronoSaurus_Data/Resources/unity default resources
+Project ChronoSaurus_Data/Resources/unity_builtin_extra
+Project ChronoSaurus_Data/sharedassets0.assets
+Project ChronoSaurus_Data/sharedassets0.assets.resS
+Project ChronoSaurus_Data/sharedassets0.resource
+Project ChronoSaurus_Data/sharedassets1.assets
+Project ChronoSaurus_Data/sharedassets1.assets.resS
+Project ChronoSaurus_Data/sharedassets1.resource
+UnityCrashHandler32.exe
+UnityPlayer.dll
